resources/webmethods/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    app: webmethods-production
    app.kubernetes.io/instance: webmethods-production
  name: webmethods-production
spec:
  ports:
  - name: 5555-tcp
    port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: webmethods-production
    deploymentconfig: webmethods-production
  sessionAffinity: None
  type: ClusterIP
